--- a/src/main/resources/templates/inventory/itemAdd.html
+++ b/src/main/resources/templates/inventory/itemAdd.html
@@ -17,7 +17,8 @@
  	<h2 th:text="#{item.lbl.title}">Item management!!</h2>
  	<p th:text="#{item.lbl.caption}">ADD Itemunitd description!!</p>
  	
- 	<form th:action="@{/items/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${item}">
+ 	<form th:action="@{/items/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${item}"
+ 	 enctype="multipart/form-data">
  	  
  	  <div class="form-group" th:name="id" th:errorclass="'form-group has-error'">
 		<div class="col-sm-6">
@@ -79,7 +80,18 @@
 	 		</ul>
 		</div>
 	  </div>
-	  	  
+
+ 	  <div class="form-group" th:name="image" th:errorclass="'form-group has-error'">
+		<label for="image" th:text="#{item.lbl.image}" class="col-sm-2 control-label"></label>
+		<div class="col-sm-6">
+			<input id="image"  th:field="*{image}" type="file" class="form-control" accept="image/jpeg,image/bmp,image/png"
+			/>
+			<ul th:if="${#fields.hasErrors('image')}" class="help-block">
+	 			<li th:each="err : ${#fields.errors('image')}" th:text="${err}"/>
+	 		</ul>
+		</div>
+	  </div>
+	  
 	   <div class="form-group">
    			<div class="col-sm-offset-2 col-sm-6">
       			<button type="submit" class="btn btn-primary" th:text="#{btn.save}">Save!!</button>
