--- a/src/main/resources/templates/inventory/items.html
+++ b/src/main/resources/templates/inventory/items.html
@@ -34,18 +34,15 @@
 
 
 	<div class="table-responsive">
+		<form th:action="@{items}" method="get" class="form-inline">
+			<div class="form-group">
+				<label class="sr-only" for="searchBox" th:text="#{btn.search}">Search!!</label>
+  				<input type="search" id="searchBox" name="searchText" th:value="${searchText}"/>
+  				<button type="submit" class="btn btn-default btn-sm" th:text="#{btn.search}">search!!</button>
+	  		</div>
+		</form>
 		<table id="categoriesTable" class="table table-condensed table-striped table-hover" th:fragment="tableCategory">
 			<thead>
-				<tr>
-					<td class="col-sm-4">
-					<form th:action="@{items}" method="get" class="form-inline">
-					<div class="form-group">
-						<label class="sr-only" for="searchBox" th:text="#{btn.search}">Search!!</label>
-		   				<input type="search" id="searchBox" name="searchText" th:value="${searchText}"/>
-		   			</div>
-		   				<button type="submit" class="btn btn-default btn-sm" th:text="#{btn.search}">search!!</button>
-	   				</form>
-				</td></tr>
 				<tr>
 					<th th:text="#{item.lbl.id}">Id!!</th>
 					<th th:text="#{itemcategory.lbl.desc}">category!!</th>
@@ -60,6 +57,7 @@
 					<td colspan="3">
 						<ul th:replace="frags/common :: pagingBar(${items},100,${searchText},'items')"></ul>
 					</td>
+					<td colspan="3"></td>
 				</tr>
 			</tfoot>
 			<tbody th:remove="all-but-first">
@@ -69,7 +67,8 @@
 					<td th:text="${item.name}">name 111</td>
 					<td th:text="${item.description}">description 111</td>
 					<td th:text="${item.rating}">rating 111</td>
-					<td><a href="#" th:href="@{/items/}+${item.id}" th:text="#{lbl.edit}">Modify!!</a></td>
+					<td><img th:if="${item.urlImage}" th:src="@{'/gallery/'+${item.urlSnapshot}}" class="col-sm-6"></img></td>
+					<td><a  href="#" th:href="@{/items/}+${item.id}" th:text="#{lbl.edit}">Modify!!</a></td>
 				</tr>
 				<tr><td>222</td><td>Category 222</td><td>a name d</td><td>a desc</td><td>a rating3</td><td><a href="#">Modify!!</a></td></tr>
 				<tr><td>222</td><td>Category 222</td><td>a name d</td><td>a desc</td><td>a rating3</td><td><a href="#">Modify!!</a></td></tr>
