popup for details, to be implemented

--- a/src/main/resources/templates/inventory/itemQuickView.html
+++ b/src/main/resources/templates/inventory/itemQuickView.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="../../../webapp/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
 
 </head>
-<body class="container-fluid">
-<div class="container-fluid">
-	<img th:if="${item.urlImage}" th:src="@{'/gallery/'+${item.urlImage}}" class="col-sm-6"></img>
-
+<body>
+	<div>
+		<img th:if="${item.urlImage}" th:src="@{'/gallery/'+${item.urlImage}}" class="img-responsive center-block"></img>
+		<p>sadsadsad</p>
+		<p>sadsadsad</p>	<p>sadsadsad</p>
 	</div>
 </body>
 </html>
