--- a/src/main/resources/templates/other/GreetingPage.html
+++ b/src/main/resources/templates/other/GreetingPage.html
@@ -7,8 +7,18 @@
 </head>
 <body>
     
-     <p th:text="${'login name: '+auth.principal.username}">login name: aUser</p>
-     
      <p th:text="${#httpServletRequest.requestURI}"></p>
+     
+     
+     <p>WITH THYMELEAF</p>
+     
+     <h4>httpServReqReference:</h4> 
+     <p th:text="${#httpServletRequest.remoteUser}"></p>
+     <h4>securityNamespace</h4>
+     <p sec:authentication="name"></p>
+     
+     Logged user: <span sec:authentication="name">someUser</span>
+	 Roles: <span sec:authentication="principal.authorities">[ROLE_X, ROLE_Y]</span>
+	
 </body>
 </html>
