--- a/src/main/resources/templates/other/SecureGreetingPage.html
+++ b/src/main/resources/templates/other/SecureGreetingPage.html
@@ -6,11 +6,13 @@
 
 </head>
 <body>
-	<p th:text="${'User authorities : '+ #strings.listJoin(auth.principal.authorities,',')}">User authorities : simple user, guest</p>
-	<p th:text="${#ctx.applicationAttributes}">ctx.attrs</p>
+     Logged user: <span sec:authentication="name">someUser</span>
+	 Roles: <span sec:authentication="principal.authorities">[ROLE_X, ROLE_Y]</span>
+
+<!-- 	<p th:text="${#ctx.applicationAttributes}">ctx.attrs</p> -->
 <!-- 	<p th:text="${#ctx.httpSession}">ctx.httpSess</p> -->
-	<p th:text="${#ctx.requestAttributes}">ctx.reqAttrs</p>
-	<p th:text="${#ctx.requestParameters}">ctx.reqParms</p>
+	<p th:text="${#ctx.sessionAttributes.SPRING_SECURITY_CONTEXT.authentication.authorities}">ctx.SPRING_SECURITY_CONTEXT</p>
+<!-- 	<p th:text="${#ctx.requestParameters}">ctx.reqParms</p> -->
 	<p th:text="${#ctx.sessionAttributes}">ctx.sessAttrs</p>
 
 <!-- 	<div th:switch="${user.role}"> -->
@@ -18,19 +20,7 @@
 <!--   <p th:case="#{roles.manager}">User is a manager</p> -->
 <!--   <p th:case="*">User is some other thing</p> -->
 <!-- </div> -->
-	
-	<table>
-      <tr>
-        <th>CODE</th>
-        <th>NAME</th>
-        <th>LAST NAME</th>
-      </tr>
-      <tr th:each="s : ${students}">
-        <td th:text="${s.code}">654654</td>
-        <td th:text="${s.name}">Pke</td>
-        <td th:text="${s.lastName}">Shredder</td>
-      </tr>
-    </table>
+
     
 </body>
 </html>
